@@ -30,7 +30,7 @@ include_package_data = True
 python_requires = >=3.8
 install_requires =
     pint>=0.20
-    pandas>=1.6
+    pandas>=1.5
 setup_requires = setuptools; setuptools_scm
 test_suite = pintpandas.testsuite
 
