@@ -4,6 +4,7 @@ pint-pandas Changelog
 0.3 (unreleased)
 ----------------
 
+- Support for pandas 1.6, with a significant uplift in capability. Many operations that gave results with object dtype now give PintArrays. #133
 - Fixed a bug which caused the creation of PintArray (and even more so all binary mathematical operations)
   to convert input arrays to lists of Quantity, thereby causing a huge slowdown. #80
 - Fixed a bug where listlike operands in binary operations were not correctly converted to Quantity arrays. #86
